sandbox/output
Hiker.java:9: error: ')' expected
        for (String i : str.split(",") {
                                      ^
1 error
